[gd_scene load_steps=5 format=2]

[ext_resource path="res://Stuff/UX/Button/Button.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-openvr/OpenVRHaptics.gdns" type="Script" id=2]

[sub_resource type="SphereShape" id=1]
radius = 0.03

[sub_resource type="PrismMesh" id=2]
size = Vector3( 0.03, 0.03, 0.03 )

[node name="Button" type="Spatial"]
script = ExtResource( 1 )

[node name="AreaTrigger" type="Area" parent="."]
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="AreaTrigger"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="RightHaptics" type="Node" parent="."]
script = ExtResource( 2 )
action = "/actions/godot/in/right_touch_haptics"
duration = 0.1

[node name="LeftHaptics" type="Node" parent="."]
script = ExtResource( 2 )
action = "/actions/godot/in/left_touch_haptics"
duration = 0.1
[connection signal="area_entered" from="AreaTrigger" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="AreaTrigger" to="." method="_on_Area_area_exited"]
